<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24px"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <group android:menuCategory="container">
        <item
            android:id="@+id/theme_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite"
            app:showAsAction="always" />
    </group>

</menu>